{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 36,
  "lineage": "2c200901-c208-a288-bf84-3d59c9120472",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab7_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629375874509:internet-gateway/igw-05ed5312ffd6df41b",
            "id": "igw-05ed5312ffd6df41b",
            "owner_id": "629375874509",
            "tags": {
              "Name": "Lab7-IGW"
            },
            "tags_all": {
              "Name": "Lab7-IGW"
            },
            "vpc_id": "vpc-0a8a125c0fdca474b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "lab7_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629375874509:network-acl/acl-020d888d48ab38688",
            "egress": [],
            "id": "acl-020d888d48ab38688",
            "ingress": [
              {
                "action": "deny",
                "cidr_block": "50.31.252.0/24",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "629375874509",
            "subnet_ids": [],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0a8a125c0fdca474b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629375874509:route-table/rtb-0d9f8c0e784992110",
            "id": "rtb-0d9f8c0e784992110",
            "owner_id": "629375874509",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05ed5312ffd6df41b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT_Lab7"
            },
            "tags_all": {
              "Name": "RT_Lab7"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8a125c0fdca474b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lab7_gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf64201c693ed428",
            "route_table_id": "rtb-0d9f8c0e784992110",
            "subnet_id": "subnet-09d512666ef30ee85"
          },
          "dependencies": [
            "aws_internet_gateway.lab7_gw",
            "aws_route_table.rt7",
            "aws_subnet.net1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cf39d32a79fb0ad",
            "route_table_id": "rtb-0d9f8c0e784992110",
            "subnet_id": "subnet-02ac4465243df29f1"
          },
          "dependencies": [
            "aws_internet_gateway.lab7_gw",
            "aws_route_table.rt7",
            "aws_subnet.net2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab7_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629375874509:security-group/sg-0bf6b3dea5d998f4d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf6b3dea5d998f4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Lab7_SG",
            "name_prefix": "",
            "owner_id": "629375874509",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Lab7SG"
            },
            "tags_all": {
              "Name": "Lab7SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8a125c0fdca474b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629375874509:subnet/subnet-09d512666ef30ee85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d512666ef30ee85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "629375874509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet1a"
            },
            "tags_all": {
              "Name": "subnet1a"
            },
            "vpc_id": "vpc-0a8a125c0fdca474b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629375874509:subnet/subnet-02ac4465243df29f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ac4465243df29f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "629375874509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet2b"
            },
            "tags_all": {
              "Name": "subnet2b"
            },
            "vpc_id": "vpc-0a8a125c0fdca474b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629375874509:vpc/vpc-0a8a125c0fdca474b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-029ffa07a9584a37e",
            "default_route_table_id": "rtb-04fc0cc5ae5f1114f",
            "default_security_group_id": "sg-09ecee70384ac4234",
            "dhcp_options_id": "dopt-068201b1bd98cac95",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8a125c0fdca474b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04fc0cc5ae5f1114f",
            "owner_id": "629375874509",
            "tags": {
              "Name": "Lab7-VPC"
            },
            "tags_all": {
              "Name": "Lab7-VPC"
            }
          }
        }
      ]
    }
  ]
}